# rosetta

./: .gitignore  Cargo.toml  build.rs  flake.nix  remediation.md
src/: cli.rs  detect.rs  input.rs  lib.rs  main.rs
tests/: input_limits.rs
